force-app/main/default/objects/BankAccount__c/BankAccount__c.object-meta.xml
<CustomObject>
    <label>CC Bank Account</label>
    <nameField>
        <label>Bank Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Bank Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>