force-app/main/default/objects/BankAccount__c/fields/Swift__c.field-meta.xml
<CustomField>
    <fullName>Swift__c</fullName>
    <label>Swift</label>
    <length>80</length>
    <type>Text</type>
</CustomField>