force-app/main/default/objects/BankAccount__c/listViews/BasicQueueAmazon_BankAccount.listView-meta.xml
<ListView>
    <fullName>BasicQueueAmazon_BankAccount</fullName>
    <filterScope>Queue</filterScope>
    <label>BasicQueueAmazon</label>
    <queue>BasicQueueAmazon</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>